--- a/Diagnosis.App/Controls/Forms/SexChooser.xaml
+++ b/Diagnosis.App/Controls/Forms/SexChooser.xaml
@@ -6,9 +6,7 @@
              xmlns:Converters="clr-namespace:Diagnosis.App.Converters" x:Class="Diagnosis.App.Controls.SexChooser"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <Converters:NegateConverter x:Key="NegateConverter" />
-    </UserControl.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -18,6 +16,6 @@
                      Content="муж" />
         <RadioButton Grid.Column="1"
                      Content="жен"
-                     IsChecked="{Binding IsMale, Converter={StaticResource NegateConverter}}" />
+                     IsChecked="{Binding IsMale, Converter={StaticResource NegateBoolean}}" />
     </Grid>
 </UserControl>
