--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -6,10 +6,9 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300" Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
     <UserControl.Resources>
-        <Style TargetType="TextBlock" x:Key="label">
+        <Style TargetType="Label" BasedOn="{StaticResource label}">
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Center" />
-            <Setter Property="TextWrapping" Value="Wrap" />
             <Setter Property="Width" Value="100" />
         </Style>
 
@@ -21,7 +20,7 @@
         <StackPanel MaxWidth="300">
             <TextBlock Style="{StaticResource ScreenTitle}">Вход</TextBlock>
             <DockPanel>
-                <TextBlock Style="{StaticResource label}">Доктор:</TextBlock>
+                <Label>Доктор:</Label>
                 <ComboBox x:Name="doctors"
                           SelectedItem="{Binding DoctorsManager.CurrentDoctor}"
                           ItemsSource="{Binding DoctorsManager.Doctors}">
@@ -35,7 +34,7 @@
             </DockPanel>
 
             <DockPanel>
-                <TextBlock Style="{StaticResource label}">Пароль:</TextBlock>
+                <Label>Пароль:</Label>
                 <Border DataContext="{Binding IsWrongPassword}">
                     <PasswordBox x:Name="password"
                                  PasswordChanged="password_PasswordChanged"/>
