--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.App.Screens.Symptoms"
+﻿<UserControl x:Class="Diagnosis.App.Screens.Words"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,7 +15,7 @@
         <StackPanel Orientation="Horizontal">
             <Button Command="{Binding CommitCommand}">Сохранить</Button>
         </StackPanel>
-        
-        <controls:FullTree DataContext="{Binding Symptoms}" Grid.Row="1" />
+
+        <controls:FullTree DataContext="{Binding Words}" Grid.Row="1" />
     </Grid>
 </UserControl>
