selecting categories in CategoryChooser works

--- a/Diagnosis.App/Controls/Forms/CategoryChooser.xaml
+++ b/Diagnosis.App/Controls/Forms/CategoryChooser.xaml
@@ -1,22 +1,28 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.Forms.CategoryChooser"
+﻿<UserControl xmlns:Controls="clr-namespace:Diagnosis.App.Controls"  
+             x:Class="Diagnosis.App.Controls.Forms.CategoryChooser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ItemsControl ItemsSource="{Binding Categories}" Focusable="False">
-            <ItemsControl.ItemsPanel>
+        <Controls:RadioListBox ItemsSource="{Binding Categories}"
+                               Focusable="False"
+                               ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                               SelectedItem="{Binding Category}">
+            
+            <Controls:RadioListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" />
+                    <UniformGrid  />
                 </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
+            </Controls:RadioListBox.ItemsPanel>
+            <Controls:RadioListBox.ItemTemplate>
                 <DataTemplate>
-                    <RadioButton Content="{Binding Name}" />
+                    <TextBlock Text="{Binding Name}"/>
                 </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+            </Controls:RadioListBox.ItemTemplate>
+        </Controls:RadioListBox>
+
     </Grid>
 </UserControl>
