--- a/Diagnosis.App/Controls/Forms/AgePicker.xaml
+++ b/Diagnosis.App/Controls/Forms/AgePicker.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.AgePicker"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Forms.AgePicker"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d"
@@ -13,7 +14,7 @@
         <conv:AgeToYearsLabel x:Key="ageLabel" />
     </UserControl.Resources>
     <StackPanel Orientation="Horizontal">
-        <controls:ComboBoxDatePicker Year="{Binding BirthYear, Mode=TwoWay}"
+        <forms:ComboBoxDatePicker Year="{Binding BirthYear, Mode=TwoWay}"
                                      Month="{Binding BirthMonth, Mode=TwoWay}"
                                      Day="{Binding BirthDay, Mode=TwoWay}" />
 
