--- a/Diagnosis.App/Controls/Forms/DateOffsetPicker.xaml
+++ b/Diagnosis.App/Controls/Forms/DateOffsetPicker.xaml
@@ -5,7 +5,7 @@
              xmlns:Converters="clr-namespace:Diagnosis.App.Converters"
              xmlns:app="clr-namespace:Diagnosis.App"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             x:Class="Diagnosis.App.Controls.DateOffsetPicker"
+             x:Class="Diagnosis.App.Controls.Forms.DateOffsetPicker"
              mc:Ignorable="d"
              d:DesignHeight="30" d:DesignWidth="300"
              x:Name="root">
