--- a/Diagnosis.App/Controls/Forms/PatientEditor.xaml
+++ b/Diagnosis.App/Controls/Forms/PatientEditor.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.PatientEditor"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Forms.PatientEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
     <UserControl.Resources>
@@ -40,11 +40,11 @@
         </DockPanel>
         <DockPanel>
             <Label Content="Дата рождения"  />
-            <controls:AgePicker Margin="0,1,0,0" />
+            <forms:AgePicker Margin="0,1,0,0" />
         </DockPanel>
         <DockPanel>
             <Label Content="Пол"   />
-            <controls:SexChooser Width="100" HorizontalAlignment="Left" Margin="0,1,0,0" />
+            <forms:SexChooser Width="100" HorizontalAlignment="Left" Margin="0,1,0,0" />
         </DockPanel>
         <DockPanel>
             <Label Content="СНИЛС"  />
