--- a/Diagnosis.App/Controls/Forms/PropertiesChooser.xaml
+++ b/Diagnosis.App/Controls/Forms/PropertiesChooser.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.PropertiesChooser"
+﻿<UserControl x:Class="Diagnosis.App.Controls.Forms.PropertiesChooser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
