--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:forms="clr-namespace:Diagnosis.App.Controls.Forms"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.Card"
              xmlns:screen="clr-namespace:Diagnosis.App.Screens"
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
@@ -34,7 +34,7 @@
             <TabItem Header="Инфо" IsEnabled="True" IsSelected="True">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10">
                     <StackPanel>
-                        <controls:PatientEditor Visibility="{Binding Editable.IsEditorActive, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <forms:PatientEditor Visibility="{Binding Editable.IsEditorActive, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
                         <StackPanel Visibility="{Binding Editable.IsEditorActive, Converter={StaticResource NegBooleanToVisibilityConverter}}">
                             <DockPanel Margin="0,5">
@@ -45,7 +45,7 @@
 
                         <Separator />
 
-                        <controls:PropertiesChooser Margin="0,5" />
+                        <forms:PropertiesChooser Margin="0,5" />
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
