--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -31,7 +31,7 @@
         </Grid>
 
         <TabControl TabStripPlacement="Left" Padding="0" Grid.Row="1">
-            <TabItem Header="Инфо" IsEnabled="True" IsSelected="True">
+            <TabItem Header="Инфо" IsEnabled="True" >
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="10">
                     <StackPanel>
                         <forms:PatientEditor Visibility="{Binding Editable.IsEditorActive, Converter={StaticResource BooleanToVisibilityConverter}}" />
@@ -49,7 +49,7 @@
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
-            <TabItem Header="Курсы">
+            <TabItem Header="Курсы" IsSelected="True">
                 <DockPanel>
                     <Grid Margin="10,10,0,10">
                         <Grid.RowDefinitions>
